--- a/bookstore_frontend/bookstore_frontend/src/app/layout/navbar/navbar.component.html
+++ b/bookstore_frontend/bookstore_frontend/src/app/layout/navbar/navbar.component.html
@@ -15,7 +15,7 @@
             <a class="nav-link" routerLink="/category"  outerLinkActive="active">Categories</a>
           </li>
           <li class="nav-item"  *ngIf="isAuth">
-            <a class="nav-link" routerLink="/Books"  outerLinkActive="active">Books</a>
+            <a class="nav-link" routerLink="/books"  outerLinkActive="active">Books</a>
           </li>
           <li class="nav-item">
             <a class="nav-link"  *ngIf="!isAuth" routerLink="/signin"  outerLinkActive="active">Signin</a>
