--- a/bookstore_frontend/bookstore_frontend/src/app/category-detail/category-detail.component.html
+++ b/bookstore_frontend/bookstore_frontend/src/app/category-detail/category-detail.component.html
@@ -17,4 +17,8 @@
         </ng-template>
     </div>
 </div>
+<button class="btn btn-primary" (click)="onCategories()">
+    Go to books
+</button>
+
 
