--- a/bookstore_frontend/bookstore_frontend/src/app/edit-category/edit-category.component.html
+++ b/bookstore_frontend/bookstore_frontend/src/app/edit-category/edit-category.component.html
@@ -35,7 +35,9 @@
     </div>
 </div>
 
-
+<button class="btn btn-primary" (click)="onCategories()">
+    Go to books
+</button>
 
 <!-- <div class="card border-primary mb-3">
     <div class="card-header bg-primary text-white ">  <h3 *ngIf="!category.id;else update">Add Category</h3></div>
