--- a/bookstore_frontend/bookstore_frontend/src/app/app.component.html
+++ b/bookstore_frontend/bookstore_frontend/src/app/app.component.html
@@ -91,18 +91,20 @@
 <div class="container">
   <!-- <h1 class="text-center mt-2 mb-2">Welcome to my {{title}}</h1> -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
+    <!-- <img src="src\assets\images\—Pngtree—education logo with shape of_6958784.png" alt="logo" /> -->
       <a class="navbar-brand" routerLink="/">{{title|uppercase}}</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent" >
           <ul class="navbar-nav">
-              <li *ngIf="isAuth" class="nav-item">
+              <li  class="nav-item">
                   <a class="nav-link" routerLink="/" routerLinkActive="active">Home</a>
               </li>
-              <li *ngIf="isAuth" class="nav-item">
+              <!-- *ngIf="isAuth" hathi canet fi home -->
+              <li  class="nav-item">
                   <a class="nav-link" routerLink="/about" routerLinkActive="active">About</a>
               </li>
               <li *ngIf="isAuth" class="nav-item">
@@ -111,6 +113,9 @@
               <li *ngIf="isAuth" class="nav-item">
                 <a class="nav-link" routerLink="/categories" routerLinkActive="active">Categories</a>
             </li>
+            <li *ngIf="isAuth" class="nav-item">
+              <a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a>
+          </li>
              <li *ngIf="isAuth&&showAdminBoard" class="nav-item">
                   <a class="nav-link" routerLink="/admin" routerLinkActive="active">Admin Board</a>
               </li>
