--- a/bookstore_frontend/bookstore_frontend/src/app/book-detail/book-detail.component.html
+++ b/bookstore_frontend/bookstore_frontend/src/app/book-detail/book-detail.component.html
@@ -10,7 +10,8 @@
                   
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><strong>IMAGE  :</strong> {{book.image}}</li>
+                    <li class="list-group-item"><strong>Code  :</strong> {{book.code}}</li>
+                    <li class="list-group-item"><strong>Category  :</strong> {{book.categoryId}}</li>
                     <li class="list-group-item"><strong>Auteur  :</strong> {{book.auteur}}.</li>
                     <li class="list-group-item"><strong>Description </strong>{{book.description}}</li>
                     <li class="list-group-item"><strong>Prix </strong>{{book.prix}}</li>
