--- a/bookstore_frontend/bookstore_frontend/src/app/books/books.component.html
+++ b/bookstore_frontend/bookstore_frontend/src/app/books/books.component.html
@@ -1,8 +1,18 @@
-<button  *ngIf="showAdminFn || showUserFn "    class="btn btn-success" (click)="onAddBook()"> Add New Book </button>
-
+<div class="row" >   
+    <div class="col"><button *ngIf="showAdminFn || showUserFn " class="btn btn-success" (click)="onAddBook()"> Add New Book </button>
+    </div>
+    <div class="col"></div>
+    <div class="col">
+        
+        <form class="d-flex">
+            <input class="form-control me-sm-2" (click)="getBooksByCategory" type="search" placeholder="Search">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+          </form>
+    </div>
+</div>
 <div class="card border-primary mt-3">
     <div class="card-header bg-primary text-white">
-     book Component
+        book Component
     </div>
     <div class="card-body">
         <div *ngIf="books.length>0;else nobooks">
@@ -15,29 +25,37 @@
                     <tr *ngFor="let book of books">
                         <td>{{book.name}}</td>
                         <td><a routerLink="/books/{{book.id}}" class="btn btn-success">Detail</a></td>
-                        <td><a routerLink="/books/edit/{{book.id}}" *ngIf="showAdminFn || showUserFn " class="btn btn-warning">Edit</a></td>
-                        <td><button class="btn btn-danger"  *ngIf="showAdminFn || showUserFn "  (click)="onDelete(book.id)" [disabled]="isWaitingDelete"> 
-                              Delete
+                        <td><a routerLink="/books/edit/{{book.id}}" *ngIf="showAdminFn || showUserFn "
+                                class="btn btn-warning">Edit</a></td>
+                        <td><button class="btn btn-danger" *ngIf="showAdminFn || showUserFn "
+                                (click)="onDelete(book.id)" [disabled]="isWaitingDelete"> 
+                                <span  *ngIf="isWaitingDelete"class="spinner-border" role="status"></span>
+                                Delete
                             </button></td>
                     </tr>
                 </tbody>
             </table>
         </div>
-       <div *ngIf="isWaitingDelete">
-        <span  class="spinner-border" role="status"></span>
-        <h4> Book Deleting... please wait!</h4>
-       </div> <div [hidden]="!isWaiting">
-        <div class="spinner-border" role="status">
+        <!-- <div *ngIf="isWaitingDelete">
+            <span class="spinner-border" role="status"></span>
+            <h4> Book Deleting... please wait!</h4>
+        </div> -->
+        <div [hidden]="!isWaiting">
+            <div class="spinner-border" role="status">
+            </div>
+            <h4>Looading... please wait!</h4>
         </div>
-        <h4>Looading... please wait!</h4>
-    </div>
-    <ng-template #nobooks>
-        <p class="alert alert-warning">
-            No BOOK found!
-        </p>
-        <div *ngIf="errMsg" class="alert alert-danger">
-            <strong>Error!</strong> {{errMsg}}
-        </div>
-    </ng-template>
+        <ng-template #nobooks>
+            <p class="alert alert-warning">
+                No BOOK found!
+            </p>
+            <div *ngIf="errMsg" class="alert alert-danger">
+                <strong>Error!</strong> {{errMsg}}
+            </div>
+        </ng-template>
 
-</div>
+    </div>
+
+
+
+    
